feat: adds view
